--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,6 +4,52 @@
 :root{
     --preto: #000000; /*preto*/
     --branco: #ffffff; /*branco*/
-    --verde: #49a09d; /*verde*/
-    --roxo: #5f2c82; /*roxo*/  
+    --verde: #0C8186; /*verde*/
+    --rosa: #F4A5A0; /*rosa*/  
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body, html{
+    background-color: var(--verde);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    background-color: var(--branco);
+    width: 250px;
+    height: 500px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+
+section#login > div#imagem{
+    background: var(--verde) url(../imagens/pexels-jess-vide-4319805.jpg )no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: right center;
+    display: block;
+}
+
+section#login > div#formulario{
+    display: block;
+    text-align: center;
+    padding: 10px;
 }
