--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,8 @@ section#login{
     height: 500px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transition: width 0.3s, heigth 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
