--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -21,6 +21,10 @@
         float: right;
         width: 65%;
     }
+
+    div#formulario p{
+        font-size: 0.9em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -34,15 +38,19 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
         background-position: left center;
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
         height: 100%;
+    }
+
+    div#formulario p{
+        font-size: 1em;
     }
 }
