--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,3 +55,12 @@ section#login > div#formulario{
     text-align: center;
     padding: 10px;
 }
+
+div#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p{
+    font-size: 0.8em;
+}
