--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,4 +63,55 @@ div#formulario h1{
 
 div#formulario p{
     font-size: 0.8em;
+    margin-bottom: 10px;
+}
+
+form > div#campo{
+    background-color: #0C8186;
+    height: 40px;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    color: white;
+    padding-top: 8px;
+}
+
+input{
+    height: 30px;
+    border: none;
+}
+
+form> input[type=submit]{
+    width: 100%;
+    height: 40px;
+    background-color: #0fa2a8;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover{
+    background-color: var(--verde);
+    cursor: pointer;
+}
+
+form a.botao{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    height: 40px;
+    color: white;
+    font-size: 0.9em;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 2px;
+    padding-top: 9px;
+    border: 1px solid #0fa2a8;
+    color: #0fa2a8;
+}
+
+form a.botao:hover{
+    background-color: var(--verde);
+    color: white;
+    border: none;
 }
