--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,8 +76,17 @@ form > div#campo{
 }
 
 input{
-    height: 30px;
+    height: 20px;
     border: none;
+    border-radius: 5px;
+    width: 160px;
+    box-sizing: border-box;
+    text-align: center; 
+    background-color: #0fa2a8;
+}
+
+::-webkit-input-placeholder{
+    color: white;
 }
 
 form> input[type=submit]{
